# Local-LLM

./: .gitignore  Method for evaluating performance of several.docx  PKG-INFO  README.md  SOURCES.txt  __init__.py  config.py  entry_points.txt  modeling.py  models.json  pyproject.toml  requirements.txt  top_level.txt  ~$thod for evaluating performance of several.docx
config/: models.json
src/local_llm_chat/: cli.py  config.py  model_cache.py  modeling.py  session.py
src/local_llm_chat/backends/: __init__.py  base.py  mlx_backend.py  transformers_backend.py
